--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<div data-ns-test="block-inline-button">
+		<button type="button">test1</button>
+		<button type="button">test2</button>
+		Answer: Inline
+	</div>
+
+	<div data-ns-test="block-inline-div">
+		<div>test1</div>
+		<div>test2</div>
+		Answer: Block
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
