--- a/main.html
+++ b/main.html
@@ -10,15 +10,27 @@
 	<!-- the entire body must be written by student -->
 
 	<div data-ns-test="block-inline-button">
-		<button type="button">test1</button>
-		<button type="button">test2</button>
+		<button type="button">Test1</button>
+		<button type="button">Test2</button>
 		Answer: Inline
 	</div>
 
 	<div data-ns-test="block-inline-div">
-		<div>test1</div>
-		<div>test2</div>
+		<div>Test1</div>
+		<div>Test2</div>
 		Answer: Block
+	</div>
+
+	<div data-ns-test="block-inline-span">
+		<span>Test1</span>
+		<span>Test2</span>
+		Answer: Inline
+	</div>
+
+	<div data-ns-test="block-inline-p">
+		<p>Test1</p>
+		<p>Test2</p>
+		Answer: block
 	</div>
 	
     <script type="text/javascript" src="./script.js">
