--- a/main.html
+++ b/main.html
@@ -9,11 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-	<div data-ns-test="block-inline-button">
-		<button type="button">Test1</button>
-		<button type="button">Test2</button>
-		Answer: Inline
-	</div>
+	<div data-ns-test="block-inline-button">    <button>Test1</button>    <button>Test2</button>    Answer: Inline </div>
 
 	<div data-ns-test="block-inline-div">
 		<div>Test1</div>
@@ -31,6 +27,12 @@
 		<p>Test1</p>
 		<p>Test2</p>
 		Answer: block
+	</div>
+
+	<div data-ns-test="block-inline-input">
+		<input type="text">Test1
+		<input type="text">Test2
+		Answer: Inline
 	</div>
 	
     <script type="text/javascript" src="./script.js">
